fix home page on mobile

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -78,6 +78,21 @@ h3 > span {
   background: var(--dark-gray) !important;
 }
 
+@media screen and (max-width: 650px) {
+  h2 {
+    font-size: 3.6rem !important;
+    text-align: center;
+  }
+  h3 {
+    font-size: 2.6rem !important;
+  }
+  h2 > span,
+  h3 > span {
+    max-width: 30rem;
+    width: 80vw;
+  }
+}
+
 h2::after,
 h3::after {
   z-index: -10;
